tests/RV64M/invalid/src/004-invalid5.s
# Invalid instruction placeholder 5
.text

.global _start

_start:
